# monobit

./: .gitignore  LICENSE  README.md  YAFF.md  banner.py  buildotb.py  convert.py  crop.py  expand.py  explore.py  fromamiga.py  frombdf.py  fromc.py  fromimage.py  fromraw.py  invert.py  modify.py  pyproject.toml  renumber.py  showfonts.html  shrink.py  stretch.py  strikexplore.py  subset.py  toimage.py
monobit/: __init__.py  amiga.py  base.py  basetypes.py  bdf.py  binary.py  blocks.py  bmfont.py  c.py  cachedprops.py  canvas.py  chart.py  constants.py  container.py  containers.py  cpi.py  encoding.py  font.py  formats.py  fzx.py  glyph.py  glyphmap.py  hex.py  hexdraw.py  image.py  label.py  labels.py  mac.py  magic.py  matrix.py  operations.py  pack.py  pdf.py  properties.py  psf.py  raster.py  raw.py  renderer.py  scripting.py  storage.py  (+11 more)
monobit/base/: __init__.py  basetypes.py  binary.py  blocks.py  cachedprops.py  image.py  imports.py  properties.py  scripting.py  struct.py  text.py
monobit/charmaps/: windows-ansi-2.0.ucp
monobit/codecs/: __init__.py  amiga.py  bdf.py  bmfont.py  c.py  cpi.py  fzx.py  hex.py  image.py  mac.py  pdf.py  psf.py  raw.py  winfnt.py  winfon.py  yaff.py
monobit/codepages/: cp853.ucp  koi8-ru.ucp  mac-roman.ucp  mac-symbol.ucp  windows-1252.ucp  zx-spectrum.ucp
monobit/containers/: __init__.py  compressors.py  container.py  directory.py  mac.py  source.py  tar.py  zip.py
monobit/core/: __init__.py  font.py  glyph.py  labels.py  pack.py  raster.py  vector.py
monobit/encoding/: __init__.py  base.py  charmapclass.py  charmaps.py  definitions.py  indexers.py  registry.py  taggers.py  unicode.py
monobit/formats/: __init__.py  _base.py  c.py  (+51 more)
tests/: __init__.py  __main__.py  base.py  test_charcell.py  test_chart.py  test_colour.py  test_encoding.py  test_export.py  test_features.py  test_formats.py  test_greyscale.py  test_hex.py  test_import.py  test_monobit.py  test_render.py  test_storage.py  test_transformations.py  test_vector.py  test_yaff.py
web/: app.css  app.js  index.html
(+1449 files in other folders)
