[project]
name = "monobit"
version = "0.30.0"
authors = [
    { name = "Rob Hagemans", email = "rob.hagemans@hotmail.com" },
]
description = "Tools for working with monochrome bitmap fonts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "reportlab",
    "pillow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
]
keywords = [
    "font", "retro", "bitfont", "bitmap-font", "8-bit"
]

[project.urls]
"Homepage" = "https://github.com/robhagemans/monobit"


[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/monobit",
    "convert.py",
    "explore.py",
    "banner.py",
    "/*.md",
]
