
[project]
name = "monobit"
version = "0.42.1"
authors = [
    { name = "Rob Hagemans", email = "rob.hagemans@hotmail.com" },
]
description = "Tools for working with monochrome bitmap fonts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "reportlab",
    "pillow",
    "python-bidi",
    "arabic-reshaper",
    "uniseg",
    "fonttools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
keywords = [
    "font", "retro", "bitfont", "bitmap-font", "pixel-font", "8-bit"
]

[project.urls]
"Homepage" = "https://github.com/robhagemans/monobit"

[project.scripts]
monobit-convert = "monobit.scripts.convert:main"
monobit-banner = "monobit.scripts.banner:main"


[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/monobit",
    "convert.py",
    "explore.py",
    "banner.py",
    "/*.md",
]
